...
                                overflow = TextOverflow.Ellipsis
                            )
                        },
                        actions = {
                            Box {
                                IconButton(
                                    modifier = Modifier.testTag("mainOverflowMenuButton"),
                                    onClick = { showOverflowMenu = true }
                                ) {
                                    Icon(
                                        imageVector = Icons.Default.MoreVert,
                                        contentDescription = stringResource(R.string.content_description_more_options)
                                    )
...
                                DropdownMenu(
                                    expanded = showOverflowMenu,
                                    onDismissRequest = { showOverflowMenu = false }
                                ) {
                                    DropdownMenuItem(
                                        enabled = ftpSettingsValid && !ftpDownloadStatus.isRunning,
                                        modifier = Modifier.testTag("mainFtpDownloadButton"),
                                        text = { Text(stringResource(R.string.download_from_ftp)) },
                                        leadingIcon = {
                                            Icon(
                                                painter = painterResource(R.drawable.download_24px),
                                                contentDescription = null
                                            )
...
